--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,9 +185,22 @@ input:focus, select:focus, textarea:focus {
     width: 80%;
 }
 
-.containerSelection .containerCheckbox:nth-child(5), .containerSelection .containerCheckbox:last-child {
+.containerSelection .containerCheckbox:nth-child(3), .containerSelection .containerCheckbox:last-child {
     margin-bottom: 0;
 }
+
+.inputAndError {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.inputAndError p {
+    font-size: .5rem;
+}
+
 
 /* TEXTAREA */
 
