--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,8 +116,9 @@ label {
 }
 
 label img {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 /* GENERAL SETTINGS INPUT SELECT */
